# kafka-go-spark-streaming

./: README.md  docker-compose.yml
src/go/kafka-producers/kraken/: Dockerfile  go.mod  go.sum  main.go
src/python/spark-streaming/: Dockerfile  pyproject.toml
src/python/spark-streaming/spark_streaming/: main.py
